# nomadic

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  common.h
